Fixed the battle line spacing

--- a/style/battle.css
+++ b/style/battle.css
@@ -75,6 +75,7 @@ body {
 	margin: auto;
 	width: auto;
 	color: #0FF4C6;
+	line-height: 1.5em;
 	text-align: center;
 	font-family: press-start-k;
 	font-size: 1em;
@@ -111,6 +112,7 @@ body {
 	width: auto;
 	color: #fff;
 	text-align: center;
+	line-height: 1.5em;
 	font-family: press-start-k;
 	font-size: 1em;
 	font-weight: normal;
@@ -129,6 +131,7 @@ body {
 	position: relative;
 	line-height: 1.5em;
 	margin: auto;
+	line-height: 1.5em;
 	padding: 2em;	
 	border: solid 0.3333em #fff;
 	border-radius: 2em;
@@ -168,7 +171,7 @@ body {
 .text-dex {
 	position: relative;
 	margin: auto;
-	line-height: 1.25em;
+	line-height: 1.5em;
 	padding: 1.5em;
 	border: solid 0.3333em #FFF07C;
 	border-radius: .25em;
@@ -235,7 +238,7 @@ body {
 	position: relative;
 	margin: auto;
 	text-align: center;
-	line-height: 1.25em;
+	line-height: 1.5em;
 	padding: 1.5em;
 	border: solid 0.3333em #48639C;
 	border-radius: .25em;
@@ -246,6 +249,7 @@ body {
 	margin: auto;
 	width: auto;
 	color: #48639C;
+	line-height: 1.5em;
 	text-align: center;
 	font-family: press-start-k;
 	font-size: 1em;
@@ -357,6 +361,7 @@ body {
 	position: relative;
 	margin: auto;
 	padding: 2em;	
+	line-height: 1.5em;
 	border: solid 0.3333em #808080;
 	border-radius: 2em;
 }
@@ -382,6 +387,7 @@ body {
 	text-align: left;
 	font-family: press-start-k;
 	font-size: 1em;
+	line-height: 1.5em;
 	font-weight: normal;
 	text-transform: uppercase;
 }
@@ -398,6 +404,7 @@ body {
 	position: relative;
 	margin: auto;
 	padding: 1.5em;
+	line-height: 1.5em;
 	border: solid 0.3333em #FFF;
 	border-radius: .25em;
 }
